creating on header the board menu

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,5 +14,12 @@
 *   Base
 */
 
+@import './base/reset.css';
 @import './base/default.css';
 @import './base/grid.css';
+
+/*
+*   Modules
+*/
+
+@import './modules/boards-colors.css'
