creating form for create new boards

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,4 +22,6 @@
 *   Modules
 */
 
-@import './modules/boards-colors.css'
+@import './modules/boards-colors.css';
+@import './modules/buttons.css';
+@import './modules/inputs.css';
