--- a/src/styles/variables/colors.css
+++ b/src/styles/variables/colors.css
@@ -13,6 +13,7 @@
   --green: #b7e394;
   --yellow: #ffe074;
   --purple: #c6b5ed;
+  --pink: #ffa9d6;
 
   --grey: #e5e5e5;
   --grey-dark: #dbdbdb;
