separate board into components

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -25,3 +25,4 @@
 @import './modules/boards-colors.css';
 @import './modules/buttons.css';
 @import './modules/inputs.css';
+@import './modules/scrollbar.css';
