move card component

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,3 +26,4 @@
 @import './modules/buttons.css';
 @import './modules/inputs.css';
 @import './modules/scrollbar.css';
+@import './modules/forms.css';
