fixs on style of layout

--- a/src/styles/modules/scrollbar.css
+++ b/src/styles/modules/scrollbar.css
@@ -6,6 +6,7 @@
 ::-webkit-scrollbar-track {
   border-radius: 15px;
   background-color: rgba(0, 0, 0, 0.08);
+  margin: 0 15px;
 }
 
 ::-webkit-scrollbar-thumb {
