darken board colors

--- a/src/styles/variables/colors.css
+++ b/src/styles/variables/colors.css
@@ -9,12 +9,12 @@
   --text-red: #e42b35;
 
   --white: #fff;
-  --blue: #a9c8f6;
-  --red: #fc8b93;
-  --green: #b7e394;
-  --yellow: #ffe074;
-  --purple: #c6b5ed;
-  --pink: #ffa9d6;
+  --blue: #8bb5f2;
+  --red: #fb6e78;
+  --green: #a7dd7d;
+  --yellow: #fed956;
+  --purple: #b39ce7;
+  --pink: #ff89c7;
 
   --grey: #e5e5e5;
   --grey-dark: #dbdbdb;
