changing board color tone

--- a/src/styles/variables/colors.css
+++ b/src/styles/variables/colors.css
@@ -9,12 +9,12 @@
   --text-red: #e42b35;
 
   --white: #fff;
-  --blue: #8bb5f2;
-  --red: #fb6e78;
-  --green: #a7dd7d;
-  --yellow: #fed956;
-  --purple: #b39ce7;
-  --pink: #ff89c7;
+  --blue: #5592eb;
+  --red: #fa5b66;
+  --green: #97d665;
+  --yellow: #fdd958;
+  --purple: #9a7bdf;
+  --pink: #ff6bb8;
 
   --grey: #e5e5e5;
   --grey-dark: #dbdbdb;
