adding background image in board

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29,6 +29,7 @@
 */
 
 @import './modules/boards-colors.css';
+@import './modules/boards-images.css';
 @import './modules/buttons.css';
 @import './modules/inputs.css';
 @import './modules/scrollbar.css';
