--- a/src/styles/modules/icons.css
+++ b/src/styles/modules/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icons';
-  src:  url('./icons/icons.eot?vwlkv1');
-  src:  url('./icons/icons.eot?vwlkv1#iefix') format('embedded-opentype'),
-    url('./icons/icons.ttf?vwlkv1') format('truetype'),
-    url('./icons/icons.woff?vwlkv1') format('woff'),
-    url('./icons/icons.svg?vwlkv1#icons') format('svg');
+  src:  url('./icons/icons.eot');
+  src:  url('./icons/icons.eot#iefix') format('embedded-opentype'),
+    url('./icons/icons.ttf') format('truetype'),
+    url('./icons/icons.woff') format('woff'),
+    url('./icons/icons.svg#icons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
