Fix in PWA, add popup for install in IOS

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -34,3 +34,4 @@
 @import './modules/inputs.css';
 @import './modules/scrollbar.css';
 @import './modules/forms.css';
+@import './modules/popup.ios.install.css';
